no content on page

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="author" content="Marc Preston" />
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <link href="css/styles.css" rel="text/css"/>
   </head>
   <body>
   <section id="">
@@ -16,41 +17,74 @@
       <ul>
         <li><a href="#">Home</a></li>
         <li><a href="#aboutMe">About Me</a></li>
-        <figure>
-          <img src="#" title="It's Me"/>
-          <figcaption>Marc Preston</figcaption>
-        </figure>
         <li><a href="#projects">Projects</a></li>
         <li><a href="#contactMe">Contact</a></li>
       </ul>
+      <figure>
+        <img src="images/MarcPreston.jpg" title="It's Me"/>
+        <figcaption>Marc Preston</figcaption>
+      </figure>
     </nav>
   </header>
   <section id="aboutMe">
-    <h2></h2>
+    <h2>About Me</h2>
     <div>
       <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ac est metus. Vivamus lectus sapien, ornare non posuere ac, finibus id tortor. Morbi sodales fringilla sapien sit amet blandit. Etiam interdum vestibulum eros, at interdum arcu feugiat id. Pellentesque sodales, risus eget maximus tempor, risus metus laoreet neque, nec iaculis massa mi blandit odio. Quisque aliquam luctus lorem, et posuere metus consequat auctor. Nulla nec tincidunt ante.
+
+        Donec sodales posuere elit, nec viverra mi semper ut. Sed et diam nunc. Vivamus aliquam, diam quis porttitor hendrerit, ex neque luctus lacus, ac rutrum dolor orci sed dui. Mauris in nunc suscipit, facilisis erat et, rhoncus dui. Quisque pharetra sagittis purus in consectetur. Pellentesque convallis tortor ac odio suscipit, vel mollis nibh accumsan. Morbi auctor leo dolor, a pulvinar leo maximus et.
       </p>
     </div>
   </section>
   <section id="projects">
-    <h2></h2>
+    <h2>Projects</h2>
     <div id="row1">
-      <a href=""><img src="" title=""/></a>
-      <a href=""><img src="" title=""/></a>
-      <a href=""><img src="" title=""/></a>
+      <a href="http://codepen.io/phyrenight/full/MaXvKx/">
+        <figure>
+          <img src="images/calculator.png" title="Calculator project"/>
+          <figcaption>Calculator Project</figcaption>
+        </figure>
+      </a>
+      <a href="https://github.com/phyrenight/Pomodoro">
+        <figure>
+          <img src="images/pomodoro screen shot.png" title="pomodoro project"/>
+          <figcaption>Pomodoro Project</figcaption>
+        </figure>
+      </a>
+      <a href="http://codepen.io/phyrenight/full/bwVaGJ/">
+        <figure>
+          <img src="images/localweatherpage.png" title="local weather project"/>
+          <figcaption>Local Weather</figcaption>
+        </figure>
+      </a>
     </div>
     <div id="row2">
-      <a href=""><img src="" title=""/></a>
-      <a href=""><img src="" title=""/></a>
-      <a href=""><img src="" title=""/></a>
+      <a href="https://github.com/phyrenight/APlaceToVisit">
+        <figure>
+          <img src="images/placestovisit.png" title="Places to visit project"/>
+          <figcaption>Placaes to Visit</figcaption>
+        </figure>
+      </a>
+      <a href="https://practice1-1247.appspot.com/blog">
+        <figure>
+          <img src="images/udacity blog.jpg" title="My udacity blog project"/>
+          <figcaption>Udacity Blog</figcaption>
+        </figure>
+      </a>
+      <a href="https://github.com/phyrenight/up3">
+        <figure>
+          <img src="images/gameSwap screen shot.png" title="Game Swap project"/>
+          <figcaption>GameSwap</figcaption>
+        </figure>
+      </a>
     </div>
   </section>
   <footer id="contactMe">
-    <h2></h2>
-    <a href=""></a>
-    <a href=""></a>
-    <a href=""></a>
-    <a href=""></a>
+    <h2>Contact Me</h2>
+    <a href="">Linkedin</a>
+    <a href="">Twitter</a>
+    <a href="">Github</a>
+    <a href="">E-mail</a>
   </footer>
   </body>
 </html>
