--- a/index.html
+++ b/index.html
@@ -7,23 +7,23 @@
     <meta name="author" content="Marc Preston" />
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <link href="css/styles.css" rel="text/css"/>
+    <link href="css/styles.css" rel="stylesheet"/>
   </head>
   <body>
   <section id="">
   </section>
   <header>
     <nav>
+      <figure>
+        <img src="images/MarcPreston.jpg" title="It's Me"/>
+        <figcaption>Marc Preston</figcaption>
+      </figure>
       <ul>
         <li><a href="#">Home</a></li>
         <li><a href="#aboutMe">About Me</a></li>
         <li><a href="#projects">Projects</a></li>
         <li><a href="#contactMe">Contact</a></li>
       </ul>
-      <figure>
-        <img src="images/MarcPreston.jpg" title="It's Me"/>
-        <figcaption>Marc Preston</figcaption>
-      </figure>
     </nav>
   </header>
   <section id="aboutMe">
@@ -81,9 +81,9 @@
   </section>
   <footer id="contactMe">
     <h2>Contact Me</h2>
-    <a href="">Linkedin</a>
-    <a href="">Twitter</a>
-    <a href="">Github</a>
+    <a href="https://www.linkedin.com/in/phyrenight/" target="_blank">Linkedin</a>
+    <a href="https://twitter.com/phyrenight">Twitter</a>
+    <a href="https://github.com/phyrenight">Github</a>
     <a href="">E-mail</a>
   </footer>
   </body>
