bug fix: some images are displayed incorrectly

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <header>
     <nav>
       <figure>
-        <img src="images/MarcPreston.jpg" title="It's Me"/>
+        <img src="images/Marcpreston25.jpg" title="It's Me"/>
         <figcaption>Marc Preston</figcaption>
       </figure>
       <ul>
@@ -41,7 +41,7 @@
     <div id="row1">
       <a href="http://codepen.io/phyrenight/full/MaXvKx/">
         <figure>
-          <img src="images/calculator.png" title="Calculator project"/>
+          <img src="images/calculator2.png" title="Calculator project"/>
           <figcaption>Calculator Project</figcaption>
         </figure>
       </a>
@@ -67,7 +67,7 @@
       </a>
       <a href="https://practice1-1247.appspot.com/blog">
         <figure>
-          <img src="images/udacity blog.jpg" title="My udacity blog project"/>
+          <img src="images/udacity blog.png" title="My udacity blog project"/>
           <figcaption>Udacity Blog</figcaption>
         </figure>
       </a>
