images are not responsive

--- a/index.html
+++ b/index.html
@@ -40,40 +40,58 @@
     <h2>Projects</h2>
     <div id="row1">
       <a href="http://codepen.io/phyrenight/full/MaXvKx/">
-        <figure>
-          <img src="images/calculator2.png" title="Calculator project"/>
+        <figure><!-- src is used because srcset does not work on all browsers -->
+          <img src="images/calculator211x90.png"
+           srcset="images/calculator211x90.png 300w, images/calculator317x134.png 1400w"
+           sizes="(max-width: 90px) 90px, (max-width: 120px) 134px"
+           title="Calculator project"/>
           <figcaption>Calculator Project</figcaption>
         </figure>
       </a>
       <a href="https://github.com/phyrenight/Pomodoro">
-        <figure>
-          <img src="images/pomodoro screen shot.png" title="pomodoro project"/>
+        <figure><!-- src is used because srcset does not work on all browsers -->
+          <img src="images/pomodoro%20screen%20shot211x90.png" 
+           srcset="images/pomodoro%20screen%20shot211x90.png 200w, images/pomodoro%20screen%20shot317x134.png 1400w"
+           sizes="(max-width: 90px) 90px, (max-width: 120px) 134px" 
+           title="pomodoro project"/>
           <figcaption>Pomodoro Project</figcaption>
         </figure>
       </a>
       <a href="http://codepen.io/phyrenight/full/bwVaGJ/">
-        <figure>
-          <img src="images/localweatherpage.png" title="local weather project"/>
+        <figure><!-- src is used because srcset does not work on all browsers -->
+          <img src="images/localweatherpage211x90.png"
+           srcset="images/localweatherpage211x90.png 200w, images/localweatherpage317X134.png 1400w"
+           sizes="(max-width: 90px) 90px, (max-width: 120px) 134px"
+           title="local weather project"/>
           <figcaption>Local Weather</figcaption>
         </figure>
       </a>
     </div>
     <div id="row2">
       <a href="https://github.com/phyrenight/APlaceToVisit">
-        <figure>
-          <img src="images/placestovisit.png" title="Places to visit project"/>
-          <figcaption>Placaes to Visit</figcaption>
+        <figure><!-- src is used because srcset does not work on all browsers -->
+          <img src="images/placestovisit211x90.png" 
+           srcset="images/placestovisit211x90.png 200w, images/placestovisit317x134.png 1200w"
+           sizes="(max-width: 90px) 90px, (max-width: 120px) 134px"
+           title="Places to visit project"/>
+          <figcaption>Places to Visit</figcaption>
         </figure>
       </a>
       <a href="https://practice1-1247.appspot.com/blog">
-        <figure>
-          <img src="images/udacity blog.png" title="My udacity blog project"/>
+        <figure><!-- src is used because srcset does not work on all browsers -->
+          <img src="images/udacity%20blog211x90.png"
+           srcset="images/udacity%20blog211x90.png 200w, images/udacity%20blog317x134.png 1200w"
+           sizes="(max-width: 90px) 90px, (max-width: 120px) 134px"
+           title="My udacity blog project"/>
           <figcaption>Udacity Blog</figcaption>
         </figure>
       </a>
       <a href="https://github.com/phyrenight/up3">
-        <figure>
-          <img src="images/gameSwap screen shot.png" title="Game Swap project"/>
+        <figure><!-- src is used because srcset does not work on all browsers -->
+          <img src="images/gameSwap%20screen%20shot211x90.png"
+           srcset="images/gameSwap%20screen%20shot211x90.png 200w, images/gameSwap%20screen%20shot317x134.png 1200w"
+           sizes="(max-width: 90px) 90px,(max-width: 120px) 134px"
+           title="Game Swap project"/>
           <figcaption>GameSwap</figcaption>
         </figure>
       </a>
