--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="author" content="Marc Preston" />
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <link href="css/normalize.css" rel="stylesheet" />
     <link href="css/styles.css" rel="stylesheet"/>
   </head>
   <body>
@@ -29,11 +30,9 @@
   <section id="aboutMe">
     <h2>About Me</h2>
     <div>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ac est metus. Vivamus lectus sapien, ornare non posuere ac, finibus id tortor. Morbi sodales fringilla sapien sit amet blandit. Etiam interdum vestibulum eros, at interdum arcu feugiat id. Pellentesque sodales, risus eget maximus tempor, risus metus laoreet neque, nec iaculis massa mi blandit odio. Quisque aliquam luctus lorem, et posuere metus consequat auctor. Nulla nec tincidunt ante.
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ac est metus. Vivamus lectus sapien, ornare non posuere ac, finibus id tortor. Morbi sodales fringilla sapien sit amet blandit. Etiam interdum vestibulum eros, at interdum arcu feugiat id. Pellentesque sodales, risus eget maximus tempor, risus metus laoreet neque, nec iaculis massa mi blandit odio. Quisque aliquam luctus lorem, et posuere metus consequat auctor. Nulla nec tincidunt ante.
 
-        Donec sodales posuere elit, nec viverra mi semper ut. Sed et diam nunc. Vivamus aliquam, diam quis porttitor hendrerit, ex neque luctus lacus, ac rutrum dolor orci sed dui. Mauris in nunc suscipit, facilisis erat et, rhoncus dui. Quisque pharetra sagittis purus in consectetur. Pellentesque convallis tortor ac odio suscipit, vel mollis nibh accumsan. Morbi auctor leo dolor, a pulvinar leo maximus et.
-      </p>
+        Donec sodales posuere elit, nec viverra mi semper ut. Sed et diam nunc. Vivamus aliquam, diam quis porttitor hendrerit, ex neque luctus lacus, ac rutrum dolor orci sed dui. Mauris in nunc suscipit, facilisis erat et, rhoncus dui. Quisque pharetra sagittis purus in consectetur. Pellentesque convallis tortor ac odio suscipit, vel mollis nibh accumsan. Morbi auctor leo dolor, a pulvinar leo maximus et.</p>
     </div>
   </section>
   <section id="projects">
@@ -99,10 +98,12 @@
   </section>
   <footer id="contactMe">
     <h2>Contact Me</h2>
-    <a href="https://www.linkedin.com/in/phyrenight/" target="_blank">Linkedin</a>
-    <a href="https://twitter.com/phyrenight">Twitter</a>
-    <a href="https://github.com/phyrenight">Github</a>
-    <a href="">E-mail</a>
+    <div id="links">
+      <a href="https://www.linkedin.com/in/phyrenight/" target="_blank">Linkedin</a>
+      <a href="https://twitter.com/phyrenight">Twitter</a>
+      <a href="https://github.com/phyrenight">Github</a>
+      <a href="">E-mail</a>
+    </div>
   </footer>
   </body>
 </html>
