placeholder takes in the about me needs to be changed out

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="css/styles.css" rel="stylesheet"/>
   </head>
   <body>
-  <section id="">
+  <section id="topImage">
   </section>
   <header>
     <nav>
@@ -30,9 +30,9 @@
   <section id="aboutMe">
     <h2>About Me</h2>
     <div>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ac est metus. Vivamus lectus sapien, ornare non posuere ac, finibus id tortor. Morbi sodales fringilla sapien sit amet blandit. Etiam interdum vestibulum eros, at interdum arcu feugiat id. Pellentesque sodales, risus eget maximus tempor, risus metus laoreet neque, nec iaculis massa mi blandit odio. Quisque aliquam luctus lorem, et posuere metus consequat auctor. Nulla nec tincidunt ante.
+      <p>I am excited to further my passion for web design by utilizing my skills of programming and front and back end communication integration with your organization. My experience in creating responsive web sites focused on end-user friendliness can drive the profitability of your organization through more efficient marketing and outreach. I have been successful utilizing diverse tools and platforms to design mobile-optimized and mobile-first sites, with hamburger slide outs. Furthermore, I am a team player with strong collaboration skills.
 
-        Donec sodales posuere elit, nec viverra mi semper ut. Sed et diam nunc. Vivamus aliquam, diam quis porttitor hendrerit, ex neque luctus lacus, ac rutrum dolor orci sed dui. Mauris in nunc suscipit, facilisis erat et, rhoncus dui. Quisque pharetra sagittis purus in consectetur. Pellentesque convallis tortor ac odio suscipit, vel mollis nibh accumsan. Morbi auctor leo dolor, a pulvinar leo maximus et.</p>
+       Please network with me so we may discuss how my skills may benefit your organization.</p>
     </div>
   </section>
   <section id="projects">
@@ -102,7 +102,7 @@
       <a href="https://www.linkedin.com/in/phyrenight/" target="_blank">Linkedin</a>
       <a href="https://twitter.com/phyrenight">Twitter</a>
       <a href="https://github.com/phyrenight">Github</a>
-      <a href="">E-mail</a>
+      <a href="mailto:phyrenight@gmail.com">E-mail</a>
     </div>
   </footer>
   </body>
