--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8"/>
     <meta name="keywords" content="frontend, front-end, web developer, fullstack developer, phyrenight"/>
     <meta name="author" content="Marc Preston" />
-    <meta name="description" content="">
+    <meta name="description" content="Marc Preston's portfolio">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link href="css/normalize.css" rel="stylesheet" />
     <link href="css/styles.css" rel="stylesheet"/>
@@ -14,6 +14,10 @@
   <section id="topImage">
   </section>
   <header>
+    <div id="nameBanner">
+      <h1 id="myName">Marc Preston</h1>
+      <h2 id="jobTitles">Web developer | Full Stack Developer</h2>
+    </div>
     <nav>
       <figure>
         <img src="images/Marcpreston25.jpg" title="It's Me"/>
